# RustFM

./: .rustfmt.toml  Cargo.toml  README.md  klad
.github/workflows/: build.yml  code.yml  coverage.yml  rust.yml
.hooks/: pre-commit
benches/: bench_main.rs
benches/benchmarks/: bench_alphabet.rs  bench_bitvector.rs  bench_fm_index.rs  bench_suffix_array.rs  mod.rs
benches/util/: generator.rs
configs/: grcov.yaml
data/: a.text
scripts/: setup-hooks.sh
src/: alphabet.rs  bitvector.rs  errors.rs  fm_index.rs  lib.rs  main.rs  matrix.rs  range.rs  suffix_array.rs  tree.rs
src/index/: bidirectional_fm_index.rs  fm_index.rs  mod.rs
src/io/: alphabet_reader.rs  mod.rs
src/tests/: alphabet.rs  bitvector.rs  mod.rs
