[package]
name = "rust-fm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitintr = "0.3.0"
error-chain = "0.12.4"
suffix_array = "0.5.0"
fm-index = "0.1"
num-traits = "0.2.15"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.5"

[[bench]]
name = "bench_main"
harness = false

[profile.release]
debug = 1
